--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,12 @@ include_directories(vendor)
 include_directories(include)
 link_directories(lib)
 
-set(AURA_SRC_FILES 
+set(AURA_SRC_FILES src/core/context.c
                    vendor/glad/glad.c)
 
 set(AURA_LIBS glfw3.lib)
 
-add_executable(Example examples/example.c ${AURA_SRC_FILES})
+add_executable(Window examples/window.c ${AURA_SRC_FILES})
 
-target_link_libraries(Example PRIVATE ${AURA_LIBS})
+target_link_libraries(Window PRIVATE ${AURA_LIBS})
 
