--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,13 +11,18 @@ set(AURA_SRC_FILES src/core/context.c
                    src/utils/utils.c
                    src/graphics/renderable.c
                    src/graphics/renderer.c
+                   src/graphics/textrenderer.c
+                   src/text/glyph.c
+                   src/text/font.c
                    vendor/glad/glad.c)
 
-set(AURA_LIBS glfw3.lib)
+set(AURA_LIBS glfw3.lib freetype.lib)
 
 add_executable(Window examples/window.c ${AURA_SRC_FILES})
 add_executable(Rectangle examples/rectangle.c ${AURA_SRC_FILES})
+add_executable(Text examples/text.c ${AURA_SRC_FILES})
 
 target_link_libraries(Window PRIVATE ${AURA_LIBS})
 target_link_libraries(Rectangle PRIVATE ${AURA_LIBS})
+target_link_libraries(Text PRIVATE ${AURA_LIBS})
 
