--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ link_directories(lib)
 set(AURA_SRC_FILES src/core/context.c
                    src/core/mesh.c
                    src/core/material.c
+                   src/core/sprite.c
                    src/utils/utils.c
                    src/graphics/renderable.c
                    src/graphics/renderer.c
@@ -21,8 +22,10 @@ set(AURA_LIBS glfw3.lib freetype.lib)
 add_executable(Window examples/window.c ${AURA_SRC_FILES})
 add_executable(Rectangle examples/rectangle.c ${AURA_SRC_FILES})
 add_executable(Text examples/text.c ${AURA_SRC_FILES})
+add_executable(Sprite examples/sprite.c ${AURA_SRC_FILES})
 
 target_link_libraries(Window PRIVATE ${AURA_LIBS})
 target_link_libraries(Rectangle PRIVATE ${AURA_LIBS})
 target_link_libraries(Text PRIVATE ${AURA_LIBS})
+target_link_libraries(Sprite PRIVATE ${AURA_LIBS})
 
