--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,9 +23,12 @@ add_executable(Window examples/window.c ${AURA_SRC_FILES})
 add_executable(Rectangle examples/rectangle.c ${AURA_SRC_FILES})
 add_executable(Text examples/text.c ${AURA_SRC_FILES})
 add_executable(Sprite examples/sprite.c ${AURA_SRC_FILES})
+add_executable(Keyboard examples/keyboard.c ${AURA_SRC_FILES})
 
 target_link_libraries(Window PRIVATE ${AURA_LIBS})
 target_link_libraries(Rectangle PRIVATE ${AURA_LIBS})
 target_link_libraries(Text PRIVATE ${AURA_LIBS})
 target_link_libraries(Sprite PRIVATE ${AURA_LIBS})
+target_link_libraries(Keyboard PRIVATE ${AURA_LIBS})
+
 
